[package]
name = "journald"
version = "0.5.0"
authors = ["The rust-journald Authors <oss@nyantec.com>", "Cody P Schafer <dev@codyps.com>"]
license = "LGPL-2.1+"
description = "A rust binding for the systemd journald api"
repository = "https://github.com/nyantec/rust-journald"
documentation = "https://docs.rs/journald"

[dependencies]
log = "~0.4"
libc = "~0.2"
utf8-cstr = "~0.1"
cstr-argument = "~0.0"
libsystemd-sys = "0.2"

