[package]
name = "journald"
version = "0.6.0"
authors = ["The rust-journald Authors <oss@nyantec.com>", "Cody P Schafer <dev@codyps.com>"]
license = "LGPL-2.1+"
description = "A rust binding for the systemd journald api"
repository = "https://github.com/nyantec/rust-journald"
documentation = "https://docs.rs/journald"
edition = "2018"

[features]
default = [ "libsystemd-sys" ]
systemd_v245 = [ "libsystemd-sys", "libsystemd-sys/systemd_v245" ]
dl_namespace = [ "open" ]
open = [ "dlopen", "dlopen_derive" ]


[dependencies]
cstr-argument = "~0.0"
libc = "~0.2"
log = "~0.4"
utf8-cstr = "~0.1"
libsystemd-sys = { version = "0.9", optional = true }
dlopen = { version = "0.1", optional = true }
dlopen_derive = { version = "0.1", optional = true }

[dependencies.serde]
package = "serde"
version = "1.0.89"
features = ["derive"]
optional = true

[dev-dependencies]
rand = "0.8"