[package]
name = "journald"
version = "0.7.0"
authors = ["The rust-journald Authors <oss@nyantec.com>", "Cody P Schafer <dev@codyps.com>"]
license = "LGPL-2.1+"
description = "A rust binding for the systemd journald api"
repository = "https://github.com/nyantec/rust-journald"
documentation = "https://docs.rs/journald"
edition = "2018"
readme = "README.md"
keywords = [ "systemd", "journald", "linux" ]


[features]
default = []
systemd_v245 = [ "libsystemd-sys/systemd_v245" ]

[dependencies]
cstr-argument = "~0.0"
libc = "~0.2"
libsystemd-sys = "0.9"
log = "~0.4"
utf8-cstr = "~0.1"

[dependencies.serde]
package = "serde"
version = "1.0.89"
features = ["derive"]
optional = true

[dev-dependencies]
rand = "0.8"
